# Supra-Dashboard

./: CMakeLists.txt  DigitalClock.qml  README.md  SeatController.h  compasscontroller.cpp  compasscontroller.h  dashboardcontroller.cpp  fileseatreader.cpp  fileseatreader.h  gpiocontroller.cpp  gpiocontroller.h  main.cpp  main.qml  tachometercontroller.cpp  tachometercontroller.h  temperaturecontroller.cpp  temperaturecontroller.h
arduino_control/: main.c
gpio_driver/: gpio-driver_1.0.bb
gpio_driver/files/: .Module.symvers.cmd  .gpiomod.ko.cmd  .gpiomod.mod.cmd  .gpiomod.mod.o.cmd  .gpiomod.o.cmd  .gpiomod.o.d  .modules.order.cmd  COPYING  gpiomod.c  gpiomod.h
meta-supra/: README
meta-supra-commonapi/: README
meta-supra-commonapi/conf/: layer.conf
meta-supra-commonapi/recipes-apps/helloworld-someip/: helloworld-someip_1.0.bb
meta-supra-commonapi/recipes-commonapi/capicxx-core-runtime/: capicxx-core-runtime_3.2.4.bb
meta-supra-commonapi/recipes-commonapi/capicxx-someip-runtime/: capicxx-someip-runtime_3.2.4.bb
meta-supra-commonapi/recipes-core/packagegroups/: packagegroup-supra-commonapi.bb
meta-supra-commonapi/recipes-support/vsomeip/: vsomeip_3.4.10.bb
meta-supra/conf/: layer.conf
meta-supra/conf/distro/: supra.conf
meta-supra/recipes-backend/button/: button_1.0.bb
meta-supra/recipes-backend/servo/: servo_1.0.bb
pot-servo/: main.cpp
qt-app/: CMakeLists.txt  CircularGauge.qml  Compass.qml  SeatController.cpp  SeatController.h  compasscontroller.h  dashboardcontroller.h  gpiocontroller.cpp  gpiocontroller.h  speedcontroller.cpp  speedcontroller.h  temperaturecontroller.h  weatherreader.cpp  weatherreader.h
(+48 files in other folders)
